--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install build tools
         run: |
           sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
-          echo "Installing build packages..."
+          echo "Installing build tools..."
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-distutils python3-setuptools rsync swig unzip zlib1g-dev file wget xz-utils zstd
           sudo -E apt-get -qq autoremove --purge
@@ -59,12 +59,17 @@ jobs:
       - name: Update feeds & install luci-app-npc package
         run: |
           cd sdk_luci
+          echo "src-link current $GITHUB_WORKSPACE" > feeds.conf
+          echo "src-git packages https://git.openwrt.org/feed/packages.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
+          echo "src-git luci https://git.openwrt.org/project/luci.git;openwrt-${{ matrix.luci_ver }}" >> feeds.conf
+          echo "src-git routing https://git.openwrt.org/feed/routing.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
           ./scripts/feeds update -a
           ./scripts/feeds install luci-app-npc
 
       - name: Build luci-app-npc package
         run: |
           cd sdk_luci
+          export TERM=vt100
           make package/luci-app-npc/{clean,compile} -j$(nproc) V=s
 
       - name: Collect luci-app-npc ipk
@@ -80,7 +85,7 @@ jobs:
           path: release/luci-app-npc/*.ipk
 
   build_npc:
-    name: Build npc Package (Multi-Arch)
+    name: Build npc Package
     runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
@@ -154,7 +159,7 @@ jobs:
       - name: Install build tools
         run: |
           sudo -E apt-get update -qq
-          sudo -E apt-get -qq install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-distutils python3-setuptools rsync swig unzip zstd xz-utils file wget
+          sudo -E apt-get -qq install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-distutils python3-setuptools rsync swig unzip xz-utils zstd file wget
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
 
@@ -187,12 +192,17 @@ jobs:
       - name: Update feeds & install npc package
         run: |
           cd sdk_npc
+          echo "src-link current $GITHUB_WORKSPACE" > feeds.conf
+          echo "src-git packages https://git.openwrt.org/feed/packages.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
+          echo "src-git luci https://git.openwrt.org/project/luci.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
+          echo "src-git routing https://git.openwrt.org/feed/routing.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
           ./scripts/feeds update -a
           ./scripts/feeds install npc
 
       - name: Build npc package for ${{ matrix.platform }}
         run: |
           cd sdk_npc
+          export TERM=vt100
           make package/npc/{clean,compile} -j$(nproc) V=s
 
       - name: Collect npc ipk for ${{ matrix.platform }}
