--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,16 +60,33 @@ jobs:
         run: |
           cd sdk_luci
           echo "src-link current $GITHUB_WORKSPACE" > feeds.conf
-          echo "src-git packages https://git.openwrt.org/feed/packages.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
-          echo "src-git luci https://git.openwrt.org/project/luci.git;openwrt-${{ matrix.luci_ver }}" >> feeds.conf
+          echo "src-git base https://github.com/openwrt/openwrt.git;openwrt-${{ matrix.sdk_ver }}" > feeds.conf
+          echo "src-git packages https://github.com/openwrt/packages.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
+          echo "src-git luci https://github.com/openwrt/luci.git;openwrt-${{ matrix.luci_ver }}" >> feeds.conf
           echo "src-git routing https://git.openwrt.org/feed/routing.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
+
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 24.x feeds/packages/lang/golang
+          
           ./scripts/feeds update -a
-          ./scripts/feeds install luci-app-npc
+          echo "CONFIG_PACKAGE_luci-app-npc=m" > .config
+          ./scripts/feeds install -d n luci-app-npc
+          make package/luci-app-npc/download -j8
+
+      - name: Pre-generate configuration
+        run: |
+          cd sdk_luci
+          echo "CONFIG_ALL_NONSHARED=n" > .config
+          echo "CONFIG_ALL_KMODS=n" >> .config
+          echo "CONFIG_ALL=n" >> .config
+          echo "CONFIG_AUTOREMOVE=n" >> .config
+          echo "CONFIG_LUCI_LANG_zh_Hans=y" >> .config
+          echo "CONFIG_PACKAGE_luci-app-npc=m" > .config
+          make defconfig
 
       - name: Build luci-app-npc package
         run: |
           cd sdk_luci
-          export TERM=vt100
           make package/luci-app-npc/{clean,compile} -j$(nproc) V=s
 
       - name: Collect luci-app-npc ipk
@@ -158,8 +175,10 @@ jobs:
 
       - name: Install build tools
         run: |
-          sudo -E apt-get update -qq
-          sudo -E apt-get -qq install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-distutils python3-setuptools rsync swig unzip xz-utils zstd file wget
+          sudo -E rm -rf /usr/share/dotnet /etc/mysql /etc/php /etc/apt/sources.list.d /usr/local/lib/android
+          echo "Installing build tools..."
+          sudo -E apt-get -qq update
+          sudo -E apt-get -qq install build-essential clang flex bison g++ gawk gcc-multilib g++-multilib gettext git libncurses-dev libssl-dev python3-distutils python3-setuptools rsync swig unzip zlib1g-dev file wget xz-utils zstd
           sudo -E apt-get -qq autoremove --purge
           sudo -E apt-get -qq clean
 
@@ -193,16 +212,33 @@ jobs:
         run: |
           cd sdk_npc
           echo "src-link current $GITHUB_WORKSPACE" > feeds.conf
-          echo "src-git packages https://git.openwrt.org/feed/packages.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
-          echo "src-git luci https://git.openwrt.org/project/luci.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
-          echo "src-git routing https://git.openwrt.org/feed/routing.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
+          echo "src-git base https://github.com/openwrt/openwrt.git;openwrt-${{ matrix.sdk_ver }}" > feeds.conf
+          echo "src-git packages https://github.com/openwrt/packages.git;openwrt-${{ matrix.sdk_ver }}" >> feeds.conf
+          echo "src-git luci https://github.com/openwrt/luci.git;openwrt-${{ matrix.luci_ver }}" >> feeds.conf
+          echo "src-git routing https://git.openwrt.org/feed/routing.git;openwrt-${{ matrix.sdk_ver }}"  >> feeds.conf
+
+          rm -rf feeds/packages/lang/golang
+          git clone https://github.com/sbwml/packages_lang_golang -b 24.x feeds/packages/lang/golang
+          
           ./scripts/feeds update -a
-          ./scripts/feeds install npc
+          echo "CONFIG_PACKAGE_npc=m" > .config
+          ./scripts/feeds install -d n npc
+          make package/npc/download -j8
+
+      - name: Pre-generate configuration
+        run: |
+          cd sdk_npc
+          echo "CONFIG_ALL_NONSHARED=n" > .config
+          echo "CONFIG_ALL_KMODS=n" >> .config
+          echo "CONFIG_ALL=n" >> .config
+          echo "CONFIG_AUTOREMOVE=n" >> .config
+          echo "CONFIG_LUCI_LANG_zh_Hans=y" >> .config
+          echo "CONFIG_PACKAGE_npc=m" > .config
+          make defconfig
 
       - name: Build npc package for ${{ matrix.platform }}
         run: |
           cd sdk_npc
-          export TERM=vt100
           make package/npc/{clean,compile} -j$(nproc) V=s
 
       - name: Collect npc ipk for ${{ matrix.platform }}
