--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -63,19 +63,18 @@ jobs:
     - name: Replace version and hash table in Makefile
       run: |
         sed -i "s/^PKG_VERSION:=.*/PKG_VERSION:=${{ env.LATEST_VERSION }}/" npc/Makefile
+
         awk '
           BEGIN {inside=0}
           /^# === NPC_HASH_TABLE_START ===/ {
             inside=1
             print
-            system("cat npc/hashes.tmp")
+            system("cat npc/hashes.tmp | sed ':a;N;s/\\\\n//g;ba'")
             next
           }
           /^# === NPC_HASH_TABLE_END ===/ {inside=0}
           inside==0 {print}
-        ' npc/Makefile > npc/Makefile.new
-        sed -i '$ s/ \\$//' npc/Makefile.new
-        mv npc/Makefile.new npc/Makefile
+        ' npc/Makefile > npc/Makefile.new && mv npc/Makefile.new npc/Makefile
 
     - name: Commit and push changes
       if: env.DOWNLOAD_FAILED != '1'
