--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Install tools
       run: sudo apt-get update && sudo apt-get install -y curl jq
@@ -103,3 +103,6 @@ jobs:
           git commit -m "Update NPC to $LATEST_VERSION"
           git push origin main
         fi
+
+    - name: Save latest version to nps.ver
+      run: echo ${{ env.LATEST_VERSION }} > nps.ver
