--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -104,5 +104,6 @@ jobs:
           exit 0
         else
           git commit -m "Update NPS to $LATEST_VERSION"
-          git push origin main
+          #git push origin main
+          git push https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}.git HEAD:main
         fi
