--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,10 +1,12 @@
-name: Build OpenWrt Packages
+name: Build OpenWrt
 
 on:
-  workflow_dispatch:
   push:
     paths:
       - nps.ver
+  workflow_dispatch:
+  repository_dispatch:
+    types: [trigger-build]
 
 jobs:
   build_luci:
