--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        ref: main
+        fetch-depth: 0
 
     - name: Install tools
       run: sudo apt-get update && sudo apt-get install -y curl jq
